--- a/style.css
+++ b/style.css
@@ -13,112 +13,333 @@ body {
     width: 100%;
 }
 
-.container-background1 img {
-    height: 100vh;
-    width: 100%;
-    object-fit: cover;
-    position: fixed;
-    z-index: -1;
+@media screen and (max-width: 2160px) {
+    
+    .container-background1 img {
+        height: 100vh;
+        width: 100%;
+        object-fit: cover;
+        position: fixed;
+        z-index: -1;
+    }
+    
+    .container-nav1 {
+        height: 9vh;
+        width: 100%;    
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+    }
+    
+    
+    .container-n1left {
+        display: flex;
+    }
+    
+    .container-n1left h1 {
+        font-size: 2.5rem;
+        font-family: "Angkor";
+        font-weight: 400;
+        font-style: normal;
+    }
+    
+    .container-n1center {
+        display: flex;
+        gap: 2rem; 
+        padding: 1rem 1.5rem;
+        border-radius: 50px;
+        background-color: #00000036;
+        backdrop-filter: blur(2);
+    }
+    
+    .container-n1center a {
+        font-size: 1.2rem;
+        font-weight: 600;
+        font-family: "ALS Direct Bold";
+        color: #000;
+        text-decoration: none;
+    }
+    
+    .container-n1right {
+        display: flex;
+    }
+    
+    .container-n1right span {
+        font-size: 1.2rem;
+        padding: 1rem 2rem;
+        background-color: #0946E1;
+        color: #fff;
+        border-radius: 50px;
+        font-family: "ALS Direct Bold";
+        font-weight: 500;
+    }
+    
+    .container-page1 {
+        height: 91vh;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;  
+    }
+    
+    .container-p1left {
+        height: 100%;
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+    
+    .container-p1left h1 {
+        font-size: 3rem;
+        font-weight: 400;
+        letter-spacing: 2px;
+        font-family: "Angkor";
+        font-style: normal;
+    }
+    
+    .container-p1left p {
+        font-size: 1rem;
+        font-weight: 500;
+        font-family: "ALS Direct Bold";
+    }
+    
+    .container-p1right {
+        height: 100%;
+        width: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .container-p1right img {
+        height: 30rem;
+        border-radius: 50px;
+    }
+    
+
 }
 
-.container-nav1 {
-    height: 9vh;
-    width: 100%;    
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+@media screen and (max-width: 600px) {
+    .container-background1 img {
+        height: 100vh;
+        width: 100%;
+        object-fit: cover;
+        position: fixed;
+        z-index: -1;
+    }
+    
+    .container-nav1 {
+        height: 9vh;
+        width: 100%;    
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+    }
+    
+    
+    .container-n1left {
+        display: flex;
+    }
+    
+    .container-n1left h1 {
+        font-size: 0.8rem;
+        font-family: "Angkor";
+        font-weight: 400;
+        font-style: normal;
+    }
+    
+    .container-n1center {
+        display: flex;
+        gap: 0.5rem; 
+        padding: 0.5rem 1rem;
+        border-radius: 50px;
+        background-color: #00000036;
+        backdrop-filter: blur(2);
+    }
+    
+    .container-n1center a {
+        font-size: 0.9rem;
+        font-weight: 600;
+        font-family: "ALS Direct Bold";
+        color: #000;
+        text-decoration: none;
+    }
+    
+    .container-n1right {
+        display: flex;
+    }
+    
+    .container-n1right span {
+        font-size: 0.8rem;
+        padding: 0.9rem 0.9rem;
+        background-color: #0946E1;
+        color: #fff;
+        border-radius: 50px;
+        font-family: "ALS Direct Bold";
+        font-weight: 500;
+    }
+    
+    .container-page1 {
+        height: 91vh;
+        width: 100%;
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: space-between;  
+    }
+    
+    .container-p1left {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        align-items: center;
+        justify-content: flex-start;
+        text-align: center;
+    }
+    
+    .container-p1left h1 {
+        padding-top: 4rem;
+        font-size: 3rem;
+        font-weight: 400;
+        letter-spacing: 2px;
+        font-family: "Angkor";
+        font-style: normal;
+    }
+    
+    .container-p1left p {
+        font-size: 1rem;
+        font-weight: 500;
+        font-family: "ALS Direct Bold";
+    }
+    
+    .container-p1right {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+    }   
+    
+    .container-p1right img {
+        height: 23rem;
+        border-radius: 50px;
+    }
 }
 
-
-.container-n1left {
-    display: flex;
+@media screen and (max-width: 430px) {
+    .container-background1 img {
+        height: 100vh;
+        width: 100%;
+        object-fit: cover;
+        position: fixed;
+        z-index: -1;
+    }
+    
+    .container-nav1 {
+        height: 9vh;
+        width: 100%;    
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+    }
+    
+    
+    .container-n1left {
+        display: flex;
+    }
+    
+    .container-n1left h1 {
+        font-size: 0.5rem;
+        font-family: "Angkor";
+        font-weight: 400;
+        font-style: normal;
+    }
+    
+    .container-n1center {
+        display: flex;
+        gap: 0.3rem; 
+        padding: 0.5rem 1rem;
+        border-radius: 50px;
+        background-color: #00000036;
+        backdrop-filter: blur(2);
+    }
+    
+    .container-n1center a {
+        font-size: 0.9rem;
+        font-weight: 600;
+        font-family: "ALS Direct Bold";
+        color: #000;
+        text-decoration: none;
+    }
+    
+    .container-n1right {
+        display: flex;
+    }
+    
+    .container-n1right span {
+        font-size: 0.8rem;
+        padding: 0.9rem 0.9rem;
+        background-color: #0946E1;
+        color: #fff;
+        border-radius: 50px;
+        font-family: "ALS Direct Bold";
+        font-weight: 500;
+    }
+    
+    .container-page1 {
+        height: 91vh;
+        width: 100%;
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: space-between;  
+    }
+    
+    .container-p1left {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        align-items: center;
+        justify-content: flex-start;
+        text-align: center;
+    }
+    
+    .container-p1left h1 {
+        font-size: 3rem;
+        font-weight: 400;
+        letter-spacing: 2px;
+        font-family: "Angkor";
+        font-style: normal;
+    }
+    
+    .container-p1left p {
+        font-size: 0.9rem;
+        font-weight: 500;
+        font-family: "ALS Direct Bold";
+    }
+    
+    .container-p1right {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+    }   
+    
+    .container-p1right img {
+        height: 15rem;
+        border-radius: 50px;
+    }
 }
-
-.container-n1left h1 {
-    font-size: 2.5rem;
-    font-family: "Angkor";
-    font-weight: 400;
-    font-style: normal;
-}
-
-.container-n1center {
-    display: flex;
-    gap: 2rem; 
-    padding: 1rem 1.5rem;
-    border-radius: 50px;
-    background-color: #00000036;
-    backdrop-filter: blur(2);
-}
-
-.container-n1center a {
-    font-size: 1.2rem;
-    font-weight: 600;
-    font-family: "ALS Direct Bold";
-    color: #000;
-    text-decoration: none;
-}
-
-.container-n1right {
-    display: flex;
-}
-
-.container-n1right span {
-    font-size: 1.2rem;
-    padding: 1rem 2rem;
-    background-color: #0946E1;
-    color: #fff;
-    border-radius: 50px;
-    font-family: "ALS Direct Bold";
-    font-weight: 500;
-}
-
-.container-page1 {
-    height: 91vh;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;  
-}
-
-.container-p1left {
-    height: 100%;
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
-
-.container-p1left h1 {
-    font-size: 3rem;
-    font-weight: 400;
-    letter-spacing: 2px;
-    font-family: "Angkor";
-    font-style: normal;
-}
-
-.container-p1left p {
-    font-size: 1rem;
-    font-weight: 400;
-    font-family: "ALS Direct Bold";
-}
-
-.container-p1right {
-    height: 100%;
-    width: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.container-p1right img {
-    height: 30rem;
-    border-radius: 50px;
-}
-
 
 
 
